feat(themes): improve monokai theme

--- a/themes/monokai.css
+++ b/themes/monokai.css
@@ -2,5 +2,5 @@
   --code-bg: #2e2e2e;
   --code-fg: #9e86c8;
   --code-title-fg: #b4d273;
-  --code-lang-fg: #b4d273;
+  --code-lang-fg: #d6d6d6;
 }
